# deepterminal

./: .env.example  .gitignore  README.md  pyproject.toml
deepterminal/: __main__.py
deepterminal/core/models/: instrument.py  order.py  position.py  signal.py
deepterminal/exchange/: base.py
deepterminal/execution/: engine.py
deepterminal/risk/: calculator.py
deepterminal/strategies/: base.py  registry.py
deepterminal/strategies/trend_following/: macd_strategy.py
deepterminal/ui/: app.py  styles.css
deepterminal/ui/widgets/: dashboard.py  positions.py  signals.py
examples/: sample_strategy.py  using_custom_strategy.py
scripts/: run_backtest.py  run_strategy.py
src/: __init__.py  main.py
src/api/: upstox_client.py
src/auth/: authenticator.py
src/backtesting/: backtest.py
src/models/: instrument.py  order.py  position.py
src/trading/: order_manager.py  position_tracker.py  strategy.py  websocket.py
src/trading/strategies/: macd_strategy.py
src/ui/: app.py  styles.css
src/ui/widgets/: auth_screen.py  instrument_selector.py  pnl_display.py  trading_panel.py
src/utils/: config.py  config_validator.py  logger.py  persistence.py
tests/: test_instrument.py  test_position.py
