[tool.poetry]
name = "deepterminal"
version = "0.1.0"
description = "An algorithmic trading application for futures and options"
authors = ["Akas Antony <antony.akas@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/akasantony/deepterminal"
keywords = ["trading", "algorithmic", "finance", "terminal", "options", "futures"]

[tool.poetry.dependencies]
python = "^3.10"
textual = "^0.50.1"
pandas = "^2.2.0"
numpy = "^1.26.0"
ta = "^0.10.2"  # Technical analysis library
requests = "^2.31.0"
websockets = "^12.0"
python-dotenv = "^1.0.0"
pydantic = "^2.5.0"
sqlalchemy = "^2.0.0"
aiohttp = "^3.9.0"
pytz = "^2023.3"
rich = "^13.7.0"
click = "^8.1.7"
apscheduler = "^3.10.0"
loguru = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pytest-asyncio = "^0.23.0"
black = "^23.10.0"
isort = "^5.12.0"
mypy = "^1.7.0"
flake8 = "^6.1.0"
pre-commit = "^3.5.0"
freezegun = "^1.2.0"
tox = "^4.11.3"

[tool.poetry.scripts]
deepterminal = "deepterminal.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=deepterminal --cov-report=term-missing"